--- a/index-style.css
+++ b/index-style.css
@@ -3,3 +3,20 @@
     text-align: center;
     font-family: Tahoma, Verdana, Arial, sans-serif;
 }
+
+a {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-decoration: none;
+    color: blue;
+}
+
+a:hover {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-decoration: underline;
+    color: cornflowerblue;
+}
+
+a:visited {
+    text-decoration: none;
+    color: blue;
+}
