--- a/index-style.css
+++ b/index-style.css
@@ -20,3 +20,19 @@ a:visited {
     text-decoration: none;
     color: blue;
 }
+
+.mmurl {
+    text-decoration: none;
+    color: white;
+    float: right;
+}
+
+.mmurl:hover {
+    text-decoration: underline;
+    color: black;
+}
+
+.mmurl:visited {
+    text-decoration: none;
+    color: white;
+}
